[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flouds-model-exporter"
version = "0.1.0"
description = "Flouds Model Exporter: ONNX export and optimization utilities"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Goutam Malakar" }]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/gmalakar/FloudsModelExporter"
Repository = "https://github.com/gmalakar/FloudsModelExporter"
Issues = "https://github.com/gmalakar/FloudsModelExporter/issues"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"sentence-transformers>=3.0.0",
	"transformers>=4.44.0,<4.58.0",
	"torch>=2.4.1",
	"onnx==1.16.1",
	"onnxruntime>=1.20.1",
	"optimum>=1.22.0",
	"optimum-onnx[onnxruntime]>=0.1.0",
	"onnxconverter-common>=1.13.0",
	"numpy==1.26.4",
	"huggingface_hub[hf_xet]>=0.34.0,<1.0",
	"psutil==5.9.8",
	"accelerate==0.27.2",
	"safetensors>=0.4.3",
	"sentencepiece==0.2.0",
	"einops==0.6.0",
	"protobuf>=4.25.3",
	"fsspec<=2025.10.0",
	"PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
	"pre-commit==4.5.1",
	"pytest>=7.0.0",
	"black==26.3.1",
	"isort==5.13.2",
	"flake8==7.0.0",
	"flake8-bugbear",
	"flake8-comprehensions",
	"mypy==1.8.0",
	"types-requests",
	"types-protobuf",
	"bandit==1.7.5",
]

[project.scripts]
flouds-export = "model_exporter.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["model_exporter*"]
exclude = ["tests*", "tools*"]

[tool.flake8]
max-line-length = 150
extend-ignore = []
