[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flouds-model-exporter"
version = "0.1.0"
description = "Flouds Model Exporter: ONNX export and optimization utilities"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["onnx", "export", "huggingface", "optimum", "model-export"]
requires-python = ">=3.11,<3.13"
authors = [{ name = "Goutam Malakar" }]
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Quality Assurance",
	"Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"transformers>=4.44.0,<4.58.0",
	"onnx==1.16.1",
	"onnxruntime>=1.20.1",
	"optimum>=1.22.0",
	"optimum-onnx[onnxruntime]>=0.1.0",
	"numpy>=1.26.4,<1.27",
	"huggingface_hub[hf_xet]>=0.34.0,<1.0",
	"psutil==5.9.8",
	"protobuf>=4.25.3",
	"PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/gmalakar/flouds_model_exporter"
Repository = "https://github.com/gmalakar/flouds_model_exporter"
Issues = "https://github.com/gmalakar/flouds_model_exporter/issues"

[project.optional-dependencies]
dev = [
	"pre-commit==4.5.1",
	"pytest>=7.0.0",
	"black==24.1.1",
	"isort==7.0.0",
	"flake8==7.0.0",
	"flake8-bugbear",
	"flake8-comprehensions",
	"mypy==1.8.0",
	"types-requests",
	"types-protobuf",
	"bandit==1.7.5",
]

[project.scripts]
flouds-export = "model_exporter.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["model_exporter*"]
exclude = ["tests*", "tools*"]

[tool.setuptools]
include-package-data = true

[tool.flake8]
max-line-length = 150
extend-ignore = []
